--- a/src/web/css_global/sidebar.css
+++ b/src/web/css_global/sidebar.css
@@ -34,7 +34,7 @@ header {
 }
 
 #sidebar {
-    height: 86%;
+    height: 100vh;
     width: 0;
     position: fixed;
     z-index: 1000;
@@ -44,7 +44,7 @@ header {
     overflow-y: auto;
     overflow-x: hidden;
     transition: 0.25s;
-    padding-top: 100px;
+    padding-top: 80px;
     scrollbar-width: thin;
     scrollbar-color: #708090 #2f4f4f;
     box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
